--- a/style.css
+++ b/style.css
@@ -4,8 +4,11 @@
     --color-white: #FFFFFF;
 }
 
+
+
 body {
     background-color: var(--color-yellow);
+    font-family: 'Montserrat', sans-serif;
 }
 
 header {
