--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@
     --color-pink: #E10079;
     --color-white: #FFFFFF;
     --color-dark-blue: #05153B;
+    --color-light-blue: #38ACE3;
+    --default-spacing: 1rem;
+
 }
 
 
@@ -10,10 +13,53 @@
 body {
     background-color: var(--color-yellow);
     font-family: 'Montserrat', sans-serif;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 header {
     background-color: #E10079;
+    padding: var(--default-spacing)
+}
+
+main {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card {
+    background-color: var(--color-white);
+    padding: 3rem;
+    border : 5px solid var(--color-light-blue);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap : 29px;
+    max-width: 700px;
+    width: 100%;
+    box-shadow: 4px 6px 12px -2px #000000; 
+    transition: ease-out 0.2s
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    cursor: pointer;
+}
+
+footer {
+    background-color: var(--color-dark-blue);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: var(--default-spacing);
+}
+
+footer p {    
+    color: var(--color-white);
 }
 
 h1 {
@@ -22,3 +68,22 @@ h1 {
     text-transform: uppercase;
     text-align: center;
 }
+
+h3 {
+    color: var(--color-dark-blue)
+}
+
+.discover-joke {
+    background-color: var(--color-dark-blue);
+    border : none;
+    padding: var(--default-spacing);
+    color: var(--color-white);
+    border-radius: 30px;
+    text-transform: uppercase;
+    font-weight: bold;
+}
+
+.discover-joke:hover {
+    cursor: pointer;
+}
+
