--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: var(--default-spacing);
 }
 
 .card {
@@ -38,6 +39,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap : 29px;
     max-width: 700px;
     width: 100%;
@@ -70,7 +72,8 @@ h1 {
 }
 
 h3 {
-    color: var(--color-dark-blue)
+    color: var(--color-dark-blue);
+    text-align: center;
 }
 
 .joke-btn {
@@ -87,3 +90,24 @@ h3 {
     cursor: pointer;
 }
 
+/* Style for mobile  */
+
+@media (width < 770px) {
+
+    h1 {
+        font-size: 1.5rem
+    }
+
+    h3 {
+        font-size: 1rem;
+    }
+
+    .card {
+        padding: 1.5rem;
+        width: 100%;
+    }
+
+    .joke-btn {
+        font-size: .7rem;
+    }
+}
